--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.22.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.0",
@@ -45,17 +44,27 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
+    "@types/aos": "^3.0.7",
+    "@types/swiper": "^6.0.0",
     "@vapi-ai/web": "^2.2.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
+    "express": "^4.21.2",
     "framer-motion": "^12.0.1",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
+    "mongoose": "^8.9.5",
     "next": "^15.1.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -67,9 +76,11 @@
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.28.2",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "swiper": "^11.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
