--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_API_URL=http://localhost:3000 
+MONGODB_URI=mongodb+srv://harsh:harsh123456789@voice.ocid3.mongodb.net/
+JWT_SECRET=your_super_secret_key_here
+PORT=3000
+REACT_APP_API_URL=http://localhost:3000/api
