--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://harsh:harsh123456789@voice.ocid3.mongodb.net/
-JWT_SECRET=your_super_secret_key_here
-PORT=3000
-REACT_APP_API_URL=http://localhost:3000/api
+VITE_MONGODB_URI=mongodb+srv://harsh:harsh123456789@voice.ocid3.mongodb.net/
+VITE_JWT_SECRET=your_super_secret_key_here
+VITE_PORT=3000
+VITE_REACT_APP_API_URL=http://localhost:3000/api
